--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,3 +6,54 @@ cor01 = #AA6C77
 cor02 = #553C64
 cor03 = #302047
 */
+
+*{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html{
+    background-color: #553C64;
+    width: 100vw;
+    height: 100vh;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+
+    background-color: rgb(255, 255, 255);
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.452);
+}
+
+section#login > div#img{
+    display: block;
+
+    background: #553C64 url(../imagens/pexels-martin-mariani-3801458\ \(1\).jpg) no-repeat; 
+
+    background-position: center center;
+    background-size: cover;
+
+    height: 200px;
+}
+
+section#login > div#formulario{
+    display: block;
+
+    padding: 10px;
+}
