--- a/estilos/style.css
+++ b/estilos/style.css
@@ -69,3 +69,58 @@ div#formulario > h1{
 div#formulario > p{
     font-size: 0.8em;
 }
+
+form > div.campo{
+    background-color: #553C64;
+    display: block;
+    width: 100%;
+    height: 35px;
+    border-radius: 5px;
+    margin: 5px 0px;
+    box-shadow: 2px 2px 2px #3b2a46;
+}
+
+div.campo > label{
+    display: none;
+}
+
+form > input[type=submit]{
+    display: block;
+    width: 100%;
+    height: 35px;
+    background-color: #6a4a7c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 2px 2px 2px #3b2a46;
+    font-size: 1em;
+}
+
+form > input[type=submit]:hover{
+    background-color: #3b2a46;
+}
+
+form > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: #6a4a7c;
+    color: #ffffff;
+    padding-top: 5px;
+    margin-top: 5px;
+    box-shadow: 2px 2px 2px #3b2a46;
+}
+
+form > a.botao > span.material-symbols-outlined{
+    font-size: 0.9em;
+}
+
+form > a.botao:hover{
+    background-color: #3b2a46;
+}
+
