--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -12,6 +12,7 @@ TV/Telas Grandes: acima de 1200px
 @media screen and (min-width: 768px) and (max-width: 992px){
     section#login{
         width: 80vw;
+        height: 350px;
     }
 
     section#login > div#img{
@@ -28,12 +29,18 @@ TV/Telas Grandes: acima de 1200px
     body{
         background-image: linear-gradient(to top, #8E6175, #553C64, #302047);
     }
+
+    div#formulario > p{
+        font-size: 1em;
+        margin: 10px 0px;
+    }
     
 }
 
 @media screen and (min-width: 992px){
     section#login{
         width: 950px;
+        height: 450px;
 
     }
 
@@ -57,7 +64,8 @@ TV/Telas Grandes: acima de 1200px
     }
 
     div#formulario > p{
-        font-size: 1.2em;
+        font-size: 1.0em;
+        margin: 10px 0px;
     }
 }
 
