--- a/estilos/style.css
+++ b/estilos/style.css
@@ -30,7 +30,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
 
@@ -41,6 +40,7 @@ section#login{
     box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.452);
 
     transition: witdh .3s, height .3s;
+    transform: translate(-50%, -50%);
     transition-timing-function: ease;
 }
 
@@ -67,6 +67,8 @@ div#formulario > h1{
 }
 
 div#formulario > p{
+    color: gray;
+    margin: 10px 0px;
     font-size: 0.8em;
 }
 
@@ -75,13 +77,32 @@ form > div.campo{
     display: block;
     width: 100%;
     height: 35px;
-    border-radius: 5px;
+    border-radius: 9px;
     margin: 5px 0px;
     box-shadow: 2px 2px 2px #3b2a46;
 }
 
 div.campo > label{
     display: none;
+}
+
+div.campo > span.material-symbols-outlined{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+
+}
+
+div.campo > input{
+    background-color: white;
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    border: 0px;
+    border-radius: 9px;
+    padding: 5px;
+    transform: translateY(-12px);
 }
 
 form > input[type=submit]{
